<resources>
    <string name="app_name" translatable="false">Flatmates</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_contact">Tenants</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_takemehome">Take me home</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="welcome">WELCOME</string>
    <string name="repeatpassword">Repeat Password</string>
    <string name="email" translatable="false">Email</string>
    <string name="fullname">Full name</string>
    <string name="choose_an_apartment">Choose an apartment</string>
    <string name="add_an_apartment">Add an apartment</string>
    <string name="give_an_id_to_your_apartment_collaboration">Give an ID to your apartment collaboration</string>
    <string name="enter_the_id_of_apartment_you_would_like_to_join">Enter the ID of apartment you would like to join</string>
    <string name="add">Add</string>
    <string name="choose">Choose</string>
    <string name="id">ID</string>
    <string name="log_out">Log out</string>
    <string name="title_activity_hometabsactivity" translatable="false">hometabsactivity</string>
    <string name="tab_text_1" translatable="false">Tab 1</string>
    <string name="tab_text_2" translatable="false">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="expenses">Expenses</string>
    <string name="menu_tasks">Tasks</string>
    <string name="menu_events">Events</string>
    <string name="menu_messageboard">Message board</string>
    <string name="organize_an_event">Organize an event</string>
    <string name="description">Description</string>
    <string name="add_event">Organize event</string>
    <string name="add_an_expense">Add an expense</string>
    <string name="title">Title</string>
    <string name="price">Price</string>
    <string name="money_spent_on_apartment">Money spent on apartment:</string>
    <string name="phone_number">Phone number:</string>
    <string name="email_dot">Email:</string>
    <string name="your_tasks">Your tasks</string>
    <string name="latest_costs">Latest costs</string>
    <string name="title_activity_maps">Map</string>
    <string name="add_task">Add task</string>
    <string name="register_error">Passwords do not match or are too short, try again</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="username_used">Username already in use</string>
    <string name="full_name">Full name:</string>
    <string name="by">By:</string>
    <string name="expense_name">Expense name</string>
    <string name="expense_cost">Expense cost</string>
    <string name="flat_message_board">Flat message board</string>
    <string name="send">Send</string>
    <string name="location_error">Flat ID is already in use</string>
    <string name="money_spent">Money spent:</string>
    <string name="add_expense">Add expense</string>
    <string name="add_a_new_task">Add a new task</string>
    <string name="home">Home</string>
    <string name="login_error">Please check your credentials.</string>
    <string name="phone_number2">Phone number</string>
    <string name="valid_email">Use a valid email address</string>
    <string name="landlord">Landlord info</string>
    <string name="save">Save</string>
    <string name="credentials">CREDENTIALS</string>
    <string name="change_your_phone_number">Change your phone number</string>
    <string name="change_your_email">Change your email</string>
    <string name="change_your_password">Change your password</string>
    <string name="delete_profile">Delete profile</string>
    <string name="remove_apartment">Remove apartment</string>
    <string name="kick_out">Kick out</string>
    <string name="fill">Fill out all the fields</string>
    <string name="login_exists">Not valid credentials or profile does not exist</string>
    <string name="change_landlord_s_email">Change landlord email</string>
    <string name="change_landlord_phone">Change landlord phone</string>

</resources>