<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.jamborpal.app.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
    </fragment>
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.jamborpal.app.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_takemehome"
        android:name="com.jamborpal.app.ui.takemehome.TakeMeHomeFragment"
        android:label="@string/menu_takemehome"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_contact"
        android:name="com.jamborpal.app.ui.contact.ContactFragment"
        android:label="@string/menu_contact"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.jamborpal.app.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_home" />

</navigation>